--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,28 @@ branches:
     - dev
 
 env:
-  - TENSORFLOW='tensorflow' KERAS='keras'
+  - TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=false
+
+
+matrix:
+  include:
+    - os: linux
+      python: 3.7
+      dist: xenial
+    - os: linux
+      python: 3.5
+    - os: linux
+      python: 3.6
+    - os: linux
+      python: 3.7
+      dist: xenial
+      env: ONLY_INSTALL=true
+    - os: linux
+      python: 3.5
+      env: ONLY_INSTALL=true
+    - os: linux
+      python: 3.6
+      env: ONLY_INSTALL=true
 
 
 matrix:
