--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,5 @@ install:
 script:
   - if [ $ONLY_INSTALL == false ]; then
        echo "huhu";
+#        pytest -v -s --durations=50 -m "not gpu";
     fi;
