--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ python:
 install: 
   - pip install $TENSORFLOW $KERAS
   - if [ $ONLY_INSTALL == true ]; then
-       pip install stardist;
+       pip install stardist
     else
-       pip install .;
+       pip install .
     fi;
 
 script:
   - if [ $ONLY_INSTALL == false ]; then
-       echo "huhu";
+       echo "huhu"
     fi;
