--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,23 @@ branches:
 
 env:
   global:
-    - TENSORFLOW='tensorflow' KERAS='keras'
-  matrix:
-    - ONLY_INSTALL=false
-    - ONLY_INSTALL=true
+    - TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=false
+    
+matrix:
+  include:
+    - os: linux
+      python: 3.7
+      dist: xenial
+    - os: linux
+      python: 3.5
+    - os: linux
+      python: 3.6
+    - os: linux
+      python: 3.7
+      dist: xenial
+      env: TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=true
 
-os:
-  - linux
-
-python:
-  - 3.5
-  - 3.6
-  - 3.7
-
-install: 
+install:
   - pip install $TENSORFLOW $KERAS
   - if [ $ONLY_INSTALL == true ]; then
        pip install stardist;
