--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ branches:
     - dev
 
 env:
-  - TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=false
+  - TENSORFLOW='tensorflow' KERAS='keras'
 
-matrix:
+  matrix:
   include:
     - os: linux
       python: 3.7
@@ -27,17 +27,19 @@ matrix:
     - os: linux
       python: 3.7
       dist: xenial
-      env: TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=true
+      env: TENSORFLOW='tensorflow' KERAS='keras' ONLY_INSTALL=1
 
 install:
   - pip install $TENSORFLOW $KERAS
-  - if [ $ONLY_INSTALL == true ]; then
+  - if [ -z $ONLY_INSTALL ]; then
        pip install stardist;
     else
        pip install .;
     fi;
 
 script:
-  - if [ $ONLY_INSTALL == false ]; then
+  - if [ -z $ONLY_INSTALL ]; then
+       echo "only installing"
+    else
        echo "haha";
     fi;
