--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
 
 script:
   - if [ -z $ONLY_INSTALL ]; then
-       echo "only installing"
+       echo "only installing";
     else
-       echo "haha";
+       pytest -v -s --durations=50 -m "not gpu";
     fi;
