--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,7 @@ matrix:
       env: TENSORFLOW='tensorflow<2' KERAS='keras' ONLY_INSTALL=1
 
 install:
-  - pip install $TENSORFLOW $KERAS
-  - if [ -z $ONLY_INSTALL ]; then
-       pip install -v .;
-    else
-       pip install stardist;
-    fi;
+  - pip install -v .;
 
 script:
   - if [ -z $ONLY_INSTALL ]; then
