--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,11 @@ matrix:
       env: TENSORFLOW='tensorflow<2' KERAS='keras' ONLY_INSTALL=1
 
 install:
-  - pip install -v .;
+  - if [ -z $ONLY_INSTALL ]; then
+       pip install .;
+    else
+       pip install stardist;
+    fi;
 
 script:
   - if [ -z $ONLY_INSTALL ]; then
